# drl-zoo

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/env/: hopper.yaml  humanoid.yaml
config/model/: dqn.yaml  ppo.yaml  rainbow.yaml  sac.yaml
config/models/: dqn.yaml  rainbow.yaml
config/train/: base.yaml  dqn.yaml  dreamer.yaml  ppo.yaml  rainbow.yaml  sac.yaml
outputs/2026-02-18/17-15-25/.hydra/: hydra.yaml
outputs/2026-02-18/17-16-07/.hydra/: hydra.yaml
outputs/2026-02-18/17-16-32/.hydra/: hydra.yaml
outputs/2026-02-18/17-16-52/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-18/17-17-15/.hydra/: hydra.yaml
outputs/2026-02-18/17-18-41/.hydra/: hydra.yaml
outputs/2026-02-18/17-22-36/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-18/17-25-28/.hydra/: hydra.yaml
outputs/2026-02-18/17-25-43/.hydra/: hydra.yaml
outputs/2026-02-18/17-25-52/.hydra/: hydra.yaml
outputs/2026-02-18/17-26-19/.hydra/: hydra.yaml
outputs/2026-02-18/17-26-44/.hydra/: hydra.yaml
outputs/2026-02-18/17-26-58/.hydra/: hydra.yaml
report/: dqn_rainbow.tex  main.tex  references.bib
report/dqn-rainbow/: main.tex  references.bib
report/dqn-rainbow/sections/: 1_introduction.tex  2_dqn.tex  3_rainbow copy.tex  3_rainbow.tex  4_conclusion.tex
report/dreamerv3/: main.tex
report/dreamerv3/sections/: 2_dreamer.tex
report/ppo-sac/: main.tex  references.bib
report/ppo-sac/sections/: 1_introduction.tex  2_ppo.tex  3_sac.tex  4_conclusion.tex  5_supplementary_material.tex
report/sections/: 1_introduction.tex  2_dqn.tex  3_rainbow.tex  4_conclusion.tex
src/: encoder.py  environment.py  img_obs_space.py  main.py  observation_space.py  optuna.py  optuna_viz.py  report.py  simulation.py  utils.py  wrappers.py
src/dqn/: model.py  models.py  train.py  train_dqn.py  train_rainbow.py
src/dreamer/: distributions.py  dreamer.py  networks.py  rssm.py  tools.py  train.py  trainer.py
src/ppo/: loss.py  model.py  train.py
src/rainbow/: buffer.py  model.py  train.py
src/sac/: buffer.py  model.py  train.py
(+46 files in other folders)
