[project]
name = "rainbow-dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flax>=0.12.2",
    "gymnasium[classic-control,mujoco]>=1.2.3",
    "hydra-core>=1.3.2",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "mujoco>=3.4.0",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
